<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/tv_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_uid"
        android:textColor="@color/color_858585"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_uid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_et_value"
        android:hint="@string/text_hint_et_uid"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="7dp"
        android:textColor="@drawable/edit_txt_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/et_room_id"
        app:layout_constraintStart_toStartOf="@id/tv_uid"
        app:layout_constraintTop_toBottomOf="@id/tv_uid" />


    <TextView
        android:id="@+id/tv_room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_room_id"
        android:textColor="@color/color_858585"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/et_room_id"
        app:layout_constraintTop_toTopOf="@id/tv_uid" />


    <EditText
        android:id="@+id/et_room_id"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_et_value"
        android:hint="@string/text_hint_et_room_id"
        android:inputType="number"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="7dp"
        android:textColor="@drawable/edit_txt_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tv_start_live"
        app:layout_constraintStart_toEndOf="@id/et_uid"
        app:layout_constraintTop_toBottomOf="@id/tv_room_id" />

    <ImageView
        android:id="@+id/iv_clear_local_rid"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:paddingLeft="6dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:src="@drawable/ic_same_clean"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_room_id"
        app:layout_constraintEnd_toEndOf="@+id/et_room_id"
        app:layout_constraintTop_toTopOf="@+id/et_room_id"
        tool:visibility="visible" />

    <ImageView
        android:id="@+id/iv_clear_local_uid"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:paddingLeft="6dp"
        android:paddingEnd="6dp"
        android:paddingRight="6dp"
        android:src="@drawable/ic_same_clean"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_uid"
        app:layout_constraintEnd_toEndOf="@+id/et_uid"
        app:layout_constraintTop_toTopOf="@+id/et_uid"
        tool:visibility="visible" />

    <TextView
        android:id="@+id/tv_start_live"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:background="@drawable/blue_btn_selector"
        android:gravity="center"
        android:text="@string/text_start_live"
        android:textColor="@drawable/blue_button_txt_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_room_id"
        app:layout_constraintTop_toTopOf="@id/et_room_id" />


    <TextView
        android:id="@+id/tv_select"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_et_value"
        android:drawableRight="@mipmap/select_triangle_icon"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:paddingRight="12dp"
        android:textColor="@color/color_414141"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_uid" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select"
        app:layout_constraintBottom_toTopOf="@id/tv_log"/>

    <TextView
        android:id="@+id/tv_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textColor="@color/color_858585"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/iv_speaker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_member" />

    <ImageView
        android:id="@+id/iv_speaker"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@mipmap/speaker_disable_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/iv_ear_monitor"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="12dp"
        android:src="@mipmap/ear_monitor_disable_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_speaker" />

    <ImageView
        android:id="@+id/iv_voice_changer"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="12dp"
        android:src="@mipmap/voice_changer_disable_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_ear_monitor" />


    <ImageView
        android:id="@+id/iv_log"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@mipmap/ic_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_api"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        android:src="@mipmap/ic_api"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_log" />

    <ImageView
        android:id="@+id/iv_feedback"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="12dp"
        android:src="@mipmap/ic_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_api" />


</androidx.constraintlayout.widget.ConstraintLayout>